--- a/Makefile.in
+++ b/Makefile.in
@@ -144,22 +144,22 @@ am_xdvipdfmx_OBJECTS = agl.$(OBJEXT) bmpimage.$(OBJEXT) cff.$(OBJEXT) \
 	dvi.$(OBJEXT) dvipdfmx.$(OBJEXT) epdf.$(OBJEXT) \
 	error.$(OBJEXT) fontmap.$(OBJEXT) jp2image.$(OBJEXT) \
 	jpegimage.$(OBJEXT) mem.$(OBJEXT) mfileio.$(OBJEXT) \
-	mpost.$(OBJEXT) numbers.$(OBJEXT) otl_opt.$(OBJEXT) \
-	pdfcolor.$(OBJEXT) pdfdev.$(OBJEXT) pdfdoc.$(OBJEXT) \
-	pdfdraw.$(OBJEXT) pdfencrypt.$(OBJEXT) pdfencoding.$(OBJEXT) \
-	pdffont.$(OBJEXT) pdfnames.$(OBJEXT) pdfobj.$(OBJEXT) \
-	pdfparse.$(OBJEXT) pdfresource.$(OBJEXT) pdfximage.$(OBJEXT) \
-	pkfont.$(OBJEXT) pngimage.$(OBJEXT) pst.$(OBJEXT) \
-	pst_obj.$(OBJEXT) sfnt.$(OBJEXT) spc_color.$(OBJEXT) \
-	spc_dvipdfmx.$(OBJEXT) spc_dvips.$(OBJEXT) spc_html.$(OBJEXT) \
-	spc_misc.$(OBJEXT) spc_pdfm.$(OBJEXT) spc_tpic.$(OBJEXT) \
-	spc_util.$(OBJEXT) spc_xtx.$(OBJEXT) specials.$(OBJEXT) \
-	subfont.$(OBJEXT) t1_char.$(OBJEXT) t1_load.$(OBJEXT) \
-	tfm.$(OBJEXT) truetype.$(OBJEXT) tt_aux.$(OBJEXT) \
-	tt_cmap.$(OBJEXT) tt_glyf.$(OBJEXT) tt_gsub.$(OBJEXT) \
-	tt_post.$(OBJEXT) tt_table.$(OBJEXT) type0.$(OBJEXT) \
-	type1.$(OBJEXT) type1c.$(OBJEXT) unicode.$(OBJEXT) \
-	vf.$(OBJEXT) xbb.$(OBJEXT)
+	mpost.$(OBJEXT) mps_op_graph.$(OBJEXT) mt19937ar.$(OBJEXT) \
+	numbers.$(OBJEXT) otl_opt.$(OBJEXT) pdfcolor.$(OBJEXT) \
+	pdfdev.$(OBJEXT) pdfdoc.$(OBJEXT) pdfdraw.$(OBJEXT) \
+	pdfencrypt.$(OBJEXT) pdfencoding.$(OBJEXT) pdffont.$(OBJEXT) \
+	pdfnames.$(OBJEXT) pdfobj.$(OBJEXT) pdfparse.$(OBJEXT) \
+	pdfresource.$(OBJEXT) pdfximage.$(OBJEXT) pkfont.$(OBJEXT) \
+	pngimage.$(OBJEXT) pst.$(OBJEXT) pst_obj.$(OBJEXT) \
+	sfnt.$(OBJEXT) spc_color.$(OBJEXT) spc_dvipdfmx.$(OBJEXT) \
+	spc_dvips.$(OBJEXT) spc_html.$(OBJEXT) spc_misc.$(OBJEXT) \
+	spc_pdfm.$(OBJEXT) spc_tpic.$(OBJEXT) spc_util.$(OBJEXT) \
+	spc_xtx.$(OBJEXT) specials.$(OBJEXT) subfont.$(OBJEXT) \
+	t1_char.$(OBJEXT) t1_load.$(OBJEXT) tfm.$(OBJEXT) \
+	truetype.$(OBJEXT) tt_aux.$(OBJEXT) tt_cmap.$(OBJEXT) \
+	tt_glyf.$(OBJEXT) tt_gsub.$(OBJEXT) tt_post.$(OBJEXT) \
+	tt_table.$(OBJEXT) type0.$(OBJEXT) type1.$(OBJEXT) \
+	type1c.$(OBJEXT) unicode.$(OBJEXT) vf.$(OBJEXT) xbb.$(OBJEXT)
 xdvipdfmx_OBJECTS = $(am_xdvipdfmx_OBJECTS)
 xdvipdfmx_LDADD = $(LDADD)
 xdvipdfmx_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
@@ -220,6 +220,7 @@ am__depfiles_remade = ./$(DEPDIR)/agl.Po ./$(DEPDIR)/bmpimage.Po \
 	./$(DEPDIR)/error.Po ./$(DEPDIR)/fontmap.Po \
 	./$(DEPDIR)/jp2image.Po ./$(DEPDIR)/jpegimage.Po \
 	./$(DEPDIR)/mem.Po ./$(DEPDIR)/mfileio.Po ./$(DEPDIR)/mpost.Po \
+	./$(DEPDIR)/mps_op_graph.Po ./$(DEPDIR)/mt19937ar.Po \
 	./$(DEPDIR)/numbers.Po ./$(DEPDIR)/otl_opt.Po \
 	./$(DEPDIR)/pdfcolor.Po ./$(DEPDIR)/pdfdev.Po \
 	./$(DEPDIR)/pdfdoc.Po ./$(DEPDIR)/pdfdraw.Po \
@@ -696,6 +697,9 @@ xdvipdfmx_SOURCES = \
 	mfileio.h \
 	mpost.c \
 	mpost.h \
+	mps_op_graph.c \
+	mps_op_graph.h \
+	mt19937ar.c \
 	numbers.c \
 	numbers.h \
 	otl_opt.c \
@@ -815,11 +819,11 @@ cmapdatadir = $(datarootdir)/texmf-dist/fonts/cmap/dvipdfmx
 dist_cmapdata_DATA = data/EUC-UCS2
 DISTCLEANFILES = config.force image*.pdf xbmc*.pdf annot*.pdf pic*.* \
 	bookm*.pdf paper*.pdf ptex*.pdf resrc*.pdf reverse.pdf \
-	ttc*.pdf
+	ttc*.pdf upjf.vf upjf*.pdf
 TESTS = xdvipdfmx.test xdvipdfm-ann.test xdvipdfm-bad.test \
 	xdvipdfm-bb.test xdvipdfm-bkm.test xdvipdfm-psz.test \
 	xdvipdfm-ptx.test xdvipdfm-res.test xdvipdfm-rev.test \
-	xdvipdfm-ttc.test
+	xdvipdfm-ttc.test dvipdfmx-upjf.test
 EXTRA_DIST = $(TESTS) tests/dvipdfmx.cfg tests/psfonts.map \
 	tests/cmr10.pfb tests/cmr10.tfm tests/image.dvi \
 	tests/image.tex tests/xbmc.dvi tests/xbmc.tex \
@@ -835,7 +839,11 @@ EXTRA_DIST = $(TESTS) tests/dvipdfmx.cfg tests/psfonts.map \
 	tests/picpdf.xbb tests/bookm.dvi tests/bookm.tex \
 	tests/paper.dvi tests/paper.tex tests/ptex.dvi tests/resrc.dvi \
 	tests/resrc.tex tests/reverse.dvi tests/ttc.dvi tests/ttc.tex \
-	tests/test.ttc tests/fullmap.dvi tests/fullmap.tex
+	tests/test.ttc tests/upjf.dvi tests/upjf.tex tests/upjf.map \
+	tests/Makefile_upjf tests/upjf_full.cnf tests/upjf_omit.cnf \
+	tests/upjf_full.vf tests/upjf_omit.vf tests/upjf-r.tfm \
+	tests/upjf-g.tfm tests/upjf.tfm tests/UPJF-UTF16-H \
+	tests/fullmap.dvi tests/fullmap.tex
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -1024,6 +1032,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mem.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mfileio.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpost.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mps_op_graph.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mt19937ar.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/numbers.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/otl_opt.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pdfcolor.Po@am__quote@ # am--include-marker
@@ -1706,6 +1716,8 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/mem.Po
 	-rm -f ./$(DEPDIR)/mfileio.Po
 	-rm -f ./$(DEPDIR)/mpost.Po
+	-rm -f ./$(DEPDIR)/mps_op_graph.Po
+	-rm -f ./$(DEPDIR)/mt19937ar.Po
 	-rm -f ./$(DEPDIR)/numbers.Po
 	-rm -f ./$(DEPDIR)/otl_opt.Po
 	-rm -f ./$(DEPDIR)/pdfcolor.Po
@@ -1829,6 +1841,8 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/mem.Po
 	-rm -f ./$(DEPDIR)/mfileio.Po
 	-rm -f ./$(DEPDIR)/mpost.Po
+	-rm -f ./$(DEPDIR)/mps_op_graph.Po
+	-rm -f ./$(DEPDIR)/mt19937ar.Po
 	-rm -f ./$(DEPDIR)/numbers.Po
 	-rm -f ./$(DEPDIR)/otl_opt.Po
 	-rm -f ./$(DEPDIR)/pdfcolor.Po
