--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,21 @@
 
 @SET_MAKE@
 
+# am/bin_links.am: Makefile fragment for bindir links.
+#
+# Copyright 2017-2020 Karl Berry <tex-live@tug.org>
+# Copyright 2011-2013 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+#
+# requires conditional WIN32
+# requires $(bin_links)
+# Symlinks within $(bindir): FILE:LINK indicates LINK->FILE
+#  for binaries and scripts use, e.g.,
+#    binprog$(EXEEXT):foo
+#    script:bar
+#  respectively, such that the links created on cygwin are
+#    'foo->binprog.exe' and 'bar->script'.
+
 
 
 VPATH = @srcdir@
@@ -653,7 +668,6 @@ xdvipdfmx_SOURCES = \
 	cid_basefont.h \
 	cid.c \
 	cid.h \
-	cid_p.h \
 	cidtype0.c \
 	cidtype0.h \
 	cidtype2.c \
@@ -1932,8 +1946,6 @@ uninstall-man: uninstall-man1
 
 $(xdvipdfmx_OBJECTS): config.force
 
-# $Id: bin_links.am 43248 2017-02-16 21:38:29Z karl $
-# am/bin_links.am: Makefile fragment for bindir links.
 .PHONY: install-bin-links uninstall-bin-links
 
 install-bin-links:
